# VectorScan

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  MIGRATION_PROGRESS.md  Makefile  README.md  SECURITY.md  VECTORSCAN_STRUCTURE_ANALYSIS.md  aggregate_metrics.py  ai_dev_full_regression_after_minimal_patches.txt  ai_dev_profile_summary.txt  ai_dev_vscode_profile.out  build_vectorscan_package.py  lead_api.py  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_scan.sh  tmp_sys_path.py  tree.txt  vector-scan.py  vectorscan.py
.github/: copilot-instructions.md
.guard_logs/: ai-dev-latest.md
.logs/: ai-dev-latest.md  ai-dev-report-latest.md
audit_logs/: fail_ledger.yaml  pass_ledger.yaml  vectorscan_ledger.yaml
checklist/: checklist.yml
demo/: vectorscan-showcase.sh
docs/: TestSpec.txt  VectorScan.md  VectorScan.txt  checklist.md  extensive-checklist.md  gumroad_delivery_email.md  lead_capture_endpoint_example.md  observability.md  output_schema.md  output_schema_reference.md  python-compatibility.md  release-distribution.md  rule_manifest.json  run_scan.md  signing.md  spec.yml  terraform-tests.md  test-checklist.md  vectorscan_landing.html  vectorscan_landing.md  (+1 more)
templates/guard_pillar/: .pre-commit-config.yaml  README.template.md  pyproject.toml
templates/guard_pillar/.github/workflows/: ci.yml  validate-schema.yml
templates/guard_pillar/fixpack/: README.md
templates/guard_pillar/scripts/: scaffold_new_pillar.py
templates/guard_pillar/src/pillar/: cli.py  constants.py
templates/guard_pillar/src/pillar/engine/: evaluator.py  loader.py  remediation.py
templates/guard_pillar/src/pillar/telemetry/: __init__.py
templates/guard_pillar/src/pillar/utils/: __init__.py
templates/guard_pillar/tests/integration/: test_cli_template.py
templates/guard_pillar/tests/shared/: loader.py
templates/guard_pillar/tests/snapshots/: test_schema_template.py
templates/guard_pillar/tests/unit/: test_evaluator_template.py
(+522 files in other folders)
