[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorscan"
version = "2.0.0"
description = "Vector pillar governance scanner for GuardSuite"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "GuardSuite", email = "engineering@guardsuite.dev" }]
requires-python = ">=3.9"
dependencies = [
  "click>=8.1,<9",
  "guardsuite-core>=2.3.0,<3.0.0",
]

[project.scripts]
vectorscan = "vectorscan.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = """
/(
    \\.venv
  | __pycache__
  | \\.terraform-bin
  | dist
)/
"""

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "__pycache__",
  ".terraform-bin",
  "dist",
]

[tool.ruff.lint]
# Enable basic rule sets (pyflakes, pycodestyle)
select = ["E", "F", "W"]
ignore = [
  "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
  "vectorscan",
  "tools",
  "tests",
]
skip = [
  "__pycache__",
  ".terraform-bin",
  "dist",
  ".venv",
]
